# agw

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.github/: CICD_SETUP.md  DEPLOYMENT_SUMMARY.md  TEMPLATE_FOR_AGX_AGW.md
.github/workflows/: ci.yml  pr-checks.yml  release.yml
docs/: RUST_ENVIRONMENT.md  RUST_TOOLCHAIN_PROPOSAL.md  architecture-memo-job-structure.md
src/: config.rs  error.rs  executor.rs  job.rs  lib.rs  main.rs  plan.rs  resp.rs  worker.rs
tests/: integration_test.rs
tmp/: agw-setup-phase1.sh
